--- a/src/profile.html
+++ b/src/profile.html
@@ -21,16 +21,16 @@
         <div class="container" id="search" style="display: flex;">
             <!--flex is shown-->
             <form>
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Scout Ranks</h4><br>
-                <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+                <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
             </form>
             <br><br>
         </div>
         <div class="container" id="results" style="display: none;">
             <!--flex is shown-->
             <div class="dummy">
-                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <fieldset>
                     <fieldset>
                         <h3 id="eventCodeDisplay"></h3>
@@ -42,8 +42,8 @@
                         </table>
                     </fieldset>
                     <!--buttons-->
-                    <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
-                    <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+                    <button type="button" class="uiButton actionButton" id="viewScoutsButton" onclick="window.location.reload()">Reload</button><br>
+                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
                 <br><br>
             </div>
