--- a/src/teams.html
+++ b/src/teams.html
@@ -1,83 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <title>Teams - 766 Scouting</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
-    <meta charset="UTF-8">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="theme-color" content="#121212" id="themeMeta">
-    <link rel="apple-touch-startup-image" href="public/launch.png">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Scouting">
-    <link rel="manifest" href="/app.webmanifest" />
-    <link rel="stylesheet" href="css/float.min.css" type="text/css">
-    <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
-    <link rel="stylesheet" href="css/table.min.css" type="text/css">
-    <meta name="mobile-web-app-capable" content="yes">
-    <script src="js/form.min.js"></script>
-</head>
-
-<body class="dark-mode">
-    <script>
-        themeHandle()
-    </script>
-    <div class="container" id="search" style="display: flex;">
-        <!--flex is shown-->
-        <form>
-            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
-            <h3>Team Data</h3>
-            <fieldset>
-                <label>Event Code: </label><br>
-                <select name="event" id="eventCode">
-                    <option value="CADA">CADA - Sacramento Regional</option>
-                    <option value="CASJ">CASJ - Silicon Valley Regional</option>
-                    <option value="WOOD" selected>WOOD - CalGames</option>
-                </select><br><br>
-                <select name="type" id="weightType">
-                    <option value="0" selected>standard weight</option>
-                    <option value="1">grid point weight</option>
-                    <option value="2">cube weight</option>
-                    <option value="3">cone weight</option>
-                    <option value="4">bottom row weight</option>
-                    <option value="5">middle row weight</option>
-                    <option value="6">top row weight</option>
-                    <option value="7">bottom row cube weight</option>
-                    <option value="8">bottom row cone weight</option>
-                    <option value="9">middle row cube weight</option>
-                    <option value="10">middle row cone weight</option>
-                    <option value="11">top row cube weight</option>
-                    <option value="12">top row cone weight</option>
-                </select>
-            </fieldset>
-            <button type="button" style="color: #000; background-color: #68C3E2; border-radius: 0.5rem; border-style: solid; border-color: #68C3E2; border-width: 0.875rem; margin-top: 1rem;" id="viewTeamsButton" onclick="getTeamRanks()">View</button><br>
-            <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
-        </form>
-        <br><br>
-    </div>
-    <div class="container" id="results" style="display: none;">
-        <!--flex is shown-->
-        <div class="dummy">
-            <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP℠</span></h1>
-            <h4>Match Data</h4>
-            <fieldset>
+    <head>
+        <title>Teams - 766 Scouting</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
+        <meta charset="UTF-8">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="theme-color" content="#121212" id="themeMeta">
+        <link rel="apple-touch-startup-image" href="public/launch.png">
+        <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+        <meta name="apple-mobile-web-app-title" content="Scouting">
+        <link rel="manifest" href="/app.webmanifest" />
+        <link rel="stylesheet" href="css/float.min.css" type="text/css">
+        <link rel="stylesheet" href="css/supplement.min.css" type="text/css">
+        <link rel="stylesheet" href="css/table.min.css" type="text/css">
+        <meta name="mobile-web-app-capable" content="yes">
+        <script src="js/form.min.js"></script>
+    </head>
+    <body class="dark-mode">
+        <script>
+            themeHandle()
+        </script>
+        <div class="container" id="search" style="display: flex;">
+            <!--flex is shown-->
+            <form>
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h3>Team Data</h3>
                 <fieldset>
-                    <h3 id="eventCodeDisplay"></h3>
-                    <table>
-                        <tr id="preInsert">
-                            <th>Rank</th>
-                            <th>Team Number</th>
-                            <th colspan="2">Match Performance Score (Avg)</th>
-                        </tr>
-                    </table>
+                    <label>Event Code: </label><br>
+                    <select name="event" id="eventCode">
+                        <option value="CADA">CADA - Sacramento Regional</option>
+                        <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                        <option value="WOOD">WOOD - CalGames</option>
+                        <option value="CCCC" selected>CCCC - Capital City Classic</option>
+                    </select><br><br>
+                    <select name="type" id="weightType">
+                        <option value="0" selected>standard weight</option>
+                        <option value="1">grid point weight</option>
+                        <option value="2">cube weight</option>
+                        <option value="3">cone weight</option>
+                        <option value="4">bottom row weight</option>
+                        <option value="5">middle row weight</option>
+                        <option value="6">top row weight</option>
+                        <option value="7">bottom row cube weight</option>
+                        <option value="8">bottom row cone weight</option>
+                        <option value="9">middle row cube weight</option>
+                        <option value="10">middle row cone weight</option>
+                        <option value="11">top row cube weight</option>
+                        <option value="12">top row cone weight</option>
+                    </select>
                 </fieldset>
-                <!--buttons-->
-                <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
-            </fieldset>
+                <button type="button" class="uiButton actionButton" id="viewTeamsButton" onclick="getTeamRanks()">View</button><br>
+                <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+            </form>
             <br><br>
         </div>
-    </div>
-    <script src="js/teams_client.min.js" type="text/javascript"></script>
-</body>
-
+        <div class="container" id="results" style="display: none;">
+            <!--flex is shown-->
+            <div class="dummy">
+                <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
+                <h4>Match Data</h4>
+                <fieldset>
+                    <fieldset>
+                        <h3 id="eventCodeDisplay"></h3>
+                        <table>
+                            <tr id="preInsert">
+                                <th>Rank</th>
+                                <th>Team Number</th>
+                                <th colspan="2">Match Performance Score (Avg)</th>
+                            </tr>
+                        </table>
+                    </fieldset>
+                    <!--buttons-->
+                    <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
+                </fieldset>
+                <br><br>
+            </div>
+        </div>
+        <script src="js/teams_client.min.js" type="text/javascript"></script>
+    </body>
 </html>
