--- a/src/manage.html
+++ b/src/manage.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Manage Data - 766 Scouting</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <meta charset="UTF-8">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <link rel="apple-touch-startup-image" href="public/launch.png">
