--- a/src/main.html
+++ b/src/main.html
@@ -42,8 +42,8 @@
                 <select name="level">
                     <option value="Practice">Practice</option>
                     <option value="Qualification" selected>Qual</option>
-                    <option value="Upper">Upper Bracket</option>
-                    <option value="Lower">Lower Bracket</option>
+                    <option value="Upper">Upper</option>
+                    <option value="Lower">Lower</option>
                 </select>
             </fieldset>
 
