--- a/src/blackjack.html
+++ b/src/blackjack.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>Blackjack - 766 Scouting</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#121212" id="themeMeta">
