--- a/src/main.html
+++ b/src/main.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Match Scouting - 766 Scouting</title>
         <meta charset="utf-8">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>Match Scouting - 766 Scouting</title>
+        
         <meta name="language" content="English">
-        <meta name="robots" content="index, follow">
+        <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -138,15 +138,15 @@
             </fieldset>
             <fieldset>
                 <label>Did the robot play defense? Explain.<br><br></label>
-                <textarea rows="2" cols="35" name="defend"></textarea>
+                <textarea rows="2" cols="30" name="defend"></textarea>
             </fieldset>
             <fieldset>
                 <label>Thoughts about driving<br><br></label>
-                <textarea rows="2" cols="35" name="driving"></textarea>
+                <textarea rows="2" cols="30" name="driving"></textarea>
             </fieldset>
             <fieldset>
                 <label>Overall assessment<br><br></label>
-                <textarea rows="4" cols="35" name="overall"></textarea>
+                <textarea rows="4" cols="30" name="overall"></textarea>
             </fieldset>
             <br>
             <p style="text-align:center">
