--- a/src/pit.html
+++ b/src/pit.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Pit Scouting - 766 Scouting</title>
         <meta charset="utf-8">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>Pit Scouting - 766 Scouting</title>
+        
         <meta name="language" content="English">
-        <meta name="robots" content="index, follow">
+        <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -76,7 +76,7 @@
             <input value="0" type="number" name="game20" hidden>
             <fieldset>
                 <label>Overall assessment<br></label>
-                <textarea rows="4" cols="38" name="overall"></textarea>
+                <textarea rows="4" cols="30" name="overall"></textarea>
             </fieldset>
             <fieldset>
                 <label>Images of ROBOT</label><br>
