--- a/src/submitted.html
+++ b/src/submitted.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>Form Submitted - 766 Scouting</title>
         <meta name="language" content="English">
-        <meta name="robots" content="index, follow">
+        <meta name="robots" content="noindex, nofollow">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -14,7 +14,6 @@
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
         <link rel="manifest" href="/app.webmanifest" />
         <meta http-equiv="refresh" content="2;url=/" />
-        <title>Form Submitted - 766 Scouting</title>
         <style>body {vertical-align: middle;}</style>
     </head>
     <body class="dark-mode">
