--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>CHARGED UP Scouting - 766 Scouting</title>
         <meta charset="utf-8">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>CHARGED UP Scouting - 766 Scouting</title>
+        
         <meta name="language" content="English">
-        <meta name="robots" content="index, follow">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
+        <meta name="robots" content="noindex, nofollow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
@@ -25,7 +25,7 @@
             <div class="offlineAlert" id="offlineAlert" style="display: none">
                 <span class="closeAlert" onclick="this.parentElement.classList.add('fadeout');">&times;</span> You are offline
             </div>
-            <form>
+            <div>
                 <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1><br>
                 <div style="display: flex; flex-direction: column;">
                     <a href="main" class="gameflair1" style="order: 1; margin-bottom: 5%;">match scouting<br></a>
@@ -37,7 +37,7 @@
                     <small style="order: 7"><a href="points" style="all: unset; margin-bottom: 7%;">points</a></small>
                     <small style="order: 8"><a href="settings" style="all: unset; margin-bottom: 7%;">settings</a></small>
                 </div>
-            </form>
+            </div>
         </div>
         <script src="js/homepage_client.js" type="text/javascript"></script>
         <script src="js/network_client.min.js" type="text/javascript"></script>
