--- a/src/pit.html
+++ b/src/pit.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Pit Scouting - 766 Scouting</title>
         <meta charset="utf-8">
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>Pit Scouting - 766 Scouting</title>
+        
         <meta name="language" content="English">
-        <meta name="robots" content="index, follow">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
+        <meta name="robots" content="noindex, nofollow">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="apple-mobile-web-app-title" content="Scouting">
@@ -41,14 +41,13 @@
                 <input type="tel" name="team" id="validateTeamInput" required>
             </fieldset>
             <h2 class="gameflair1">Pit Scouting</h2>
-            <h4 style="color: #a9a9a9;">&emsp;If you don't know the answer, just ask the team themselves</h4>
             <fieldset>
                 <label>Drive Type<br></label>
                 <select name="drivetype">
                         <option value="westcoast">Westcoast</option>
                         <option value="swerve" selected>Swerve (Like Ours)</option>
                         <option value="other">Other (Explain in overall)</option>
-                    </select>
+                </select>
             </fieldset>
             <fieldset>
                 <label>Experience<br></label>
@@ -77,7 +76,7 @@
             <input value="0" type="number" name="game20" hidden>
             <fieldset>
                 <label>Overall assessment<br></label>
-                <textarea rows="4" cols="38" name="overall"></textarea>
+                <textarea rows="4" cols="30" name="overall"></textarea>
             </fieldset>
             <fieldset>
                 <label>Images of ROBOT</label><br>
