--- a/src/scouts.html
+++ b/src/scouts.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>Scouts - 766 Scouting</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, viewport-fit=cover">
-        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="apple-touch-startup-image" href="public/launch.png">
