fix current season endpoints

--- a/src/points.html
+++ b/src/points.html
@@ -28,7 +28,7 @@
                 color: var(--textColor);
             }
         </style>
-        <script src="appinstall.js"></script>
+        <script src="js/form.min.js"></script>
     </head>
     <body class="dark-mode">
         <script>
