--- a/src/denied.html
+++ b/src/denied.html
@@ -10,6 +10,7 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
         <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
+        <script src="js/form.min.js"></script>
         <style>
             body {
                 vertical-align: middle;
@@ -17,7 +18,7 @@
         </style>
     </head>
     <body class="dark-mode">
-        <h1 style="color: #FF0000">Access Denied!</h1>
+        <h1 style="color: var(--cancelColor)">Access Denied!</h1>
         <h3 style="text-align: center;" class="gameflair1">You do not seem to be part of the Team 766 discord server<br>Alternatively, you do not have permission to access the requested resource!</h3>
     </body>
 </html>
