Mobile form optim (#11)
patched #10

--- a/src/submitted.html
+++ b/src/submitted.html
@@ -12,15 +12,16 @@
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="theme-color" content="#121212" id="themeMeta">
         <link rel="stylesheet" href="css/float.min.css" type="text/css">
-        <link rel="manifest" href="/app.webmanifest" />
-        <meta http-equiv="refresh" content="2;url=/" />
+        <link rel="manifest" href="/app.webmanifest"/>
+        <meta http-equiv="refresh" content="2;url=/"/>
+        <script src="js/form.min.js"></script>
         <style>body {vertical-align: middle;}</style>
     </head>
     <body class="dark-mode">
-        <script>
-            themeHandle()
-        </script>
-        <h1 style="color: #FFB600">Submitted!</h1><br>
-        <h3 style="text-align: center;" class="gameflair1">Redirecting...</h3>
+        <script>themeHandle()</script>
+        <div>
+            <h1 style="color: #FFB600">Submitted!</h1><br>
+            <h3 style="text-align: center;" class="gameflair1">Redirecting...</h3>
+        </div>
     </body>
 </html>
