make the apis more sane
comment the code a little more

--- a/src/spin.html
+++ b/src/spin.html
@@ -31,7 +31,7 @@
                 <br><h3 style="line-height:0%">⇓</h3>
                 <img src="assets/wheel.png" id="wheel" width="250vw" height="250vw"><br>
                 <h3 id="result" style="display: none;"></h3>
-                <button id="playBtn" type="button" class="uiButton returnButton" onclick="spinWheel()">Spin</button><br><button id="backBtn" type="button" style="color: var(--gameFlairColor); background-color: #121212; border-radius: 0.5rem; border-style: solid; border-color: #121212; border-width: 0.875rem; margin-top: 1rem;" onclick="goToHome()">Back</button>
+                <button id="playBtn" type="button" class="uiButton returnButton" onclick="spinWheel()">Spin</button><br><button id="backBtn" type="button" style="color: var(--gameFlairColor); background-color: #121212; border-radius: 0.5rem; border-style: solid; border-color: #121212; border-width: 0.875rem; margin-top: 1rem;" onclick="window.location.href = '/points'">Back</button>
             </div>
         </div>
         <script src="js/casino_spin_client.min.js" type="text/javascript"></script>
