--- a/src/browse.html
+++ b/src/browse.html
@@ -20,31 +20,27 @@
         <script>
             themeHandle()
         </script>
-        <div class="container" id="search" style="display: <%= displaySearch %>;">
-            <!--flex is shown-->
+        <div class="container" id="search" style="display: flex;">
             <form>
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
-                <h4 style="color: red; display: <%= errorDisplay %>">
-                    <%= errorMessage %>
-                </h4>
                 <h4>Match Data</h4>
-                <fieldset>
-                    <select name="type">
-                        <option value="team" selected>Team </option>
-                        <option value="match">Match </option>
+                <h3 style="color: var(--cancelColor); display: none;" id="errorTxt"></h3>
+                <fieldset id="searchFset">
+                    <select id="type">
+                        <option value="team" selected>Team</option>
+                        <option value="match">Match</option>
                     </select>
-                    <input type="tel" name="number" required>
-                    <br>
+                    <input type="tel" id="number" required><br>
                     <fieldset><br>
                         <label>Event Code: </label><br>
-                        <select name="event">
-                        <option value="CADA">CADA - Sacramento Regional</option>
-                        <option value="CASJ">CASJ - Silicon Valley Regional</option>
-                        <option value="WOOD">WOOD - CalGames</option>
-                        <option value="CCCC" selected>CCCC - Capital City Classic</option>
-                    </select>
+                        <select id="event">
+                            <option value="CADA">CADA - Sacramento Regional</option>
+                            <option value="CASJ">CASJ - Silicon Valley Regional</option>
+                            <option value="WOOD">WOOD - CalGames</option>
+                            <option value="CCCC" selected>CCCC - Capital City Classic</option>
+                        </select>
                     </fieldset>
-                    <button type="submit" class="uiButton actionButton">Search</button><br>
+                    <button type="button" class="uiButton actionButton" onclick="search()" id="searchBtn">Search</button><br>
                     <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
                 <small style="text-align: center;">To see all teams ranked by weighted score <a href="teams" style="all: unset; color: var(--gameFlairColor);">here</a></small><br>
@@ -53,15 +49,11 @@
             </form>
             <br><br>
         </div>
-        <div class="container" id="results" style="display: <%= displayResults %>;">
-            <!--flex is shown-->
+        <div class="container" id="results" style="display: none;">
             <div class="dummy">
                 <h1 style="font-family: 'raleway-300'">2023 Scouting Data<br><span class="gametitle">CHARGED UP</span></h1>
                 <h4>Match Data</h4><br>
-                <h3>
-                    <%= resultsTeamNumber %> at
-                        <%= resultsEventCode %>
-                </h3>
+                <h3 id="teamAtEvent"></h3>
                 <div style="overflow-x: auto; width: 95vw;">
                     <table>
                         <tr>
@@ -77,7 +69,7 @@
                             <th rowspan="2">Cycle Time</th>
                             <th rowspan="2">Match Performance Score</th>
                         </tr>
-                        <tr>
+                        <tr id="subheadings">
                             <th>B/M/T</th>
                             <th>B/M/T</th>
                             <th>Low</th>
@@ -90,22 +82,13 @@
                             <th>Mid</th>
                             <th>High</th>
                         </tr>
-                        <%- resultsBody %>
                     </table>
                 </div>
-                <!--buttons-->
-                <button type="button" class="uiButton returnButton" onclick="removeURLParams()">New Search</button>&emsp;<button type="button" class="uiButton returnButton" onclick="goToHome()">Home</button>
+                <button type="button" class="uiButton returnButton" onclick="window.location.reload()">New Search</button>&emsp;<button type="button" class="uiButton returnButton" onclick="goToHome()">Home</button>
                 <br><br>
                 <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: var(--gameFlairColor);">here</a></small>
             </div>
         </div>
-        <script>
-            function removeURLParams() {
-                window.location.href = "/browse"
-            }
-            function goToHome() {
-                window.location.href = "/";
-            }
-        </script>
+        <script src="js/browse_client.min.js" type="text/javascript"></script>
     </body>
 </html>
