--- a/src/browse.html
+++ b/src/browse.html
@@ -40,7 +40,7 @@
                             <option value="CCCC" selected>CCCC - Capital City Classic</option>
                         </select>
                     </fieldset>
-                    <button type="button" class="uiButton actionButton" onclick="search()" id="searchBtn">Search</button><br>
+                    <button type="button" class="uiButton actionButton" onclick="callSearch()" id="searchBtn">Search</button><br>
                     <button type="button" class="uiButton returnButton" onclick="goToHome()">Back</button>
                 </fieldset>
                 <small style="text-align: center;">To see all teams ranked by weighted score <a href="teams" style="all: unset; color: var(--gameFlairColor);">here</a></small><br>
@@ -84,7 +84,7 @@
                         </tr>
                     </table>
                 </div>
-                <button type="button" class="uiButton returnButton" onclick="window.location.reload()">New Search</button>&emsp;<button type="button" class="uiButton returnButton" onclick="goToHome()">Home</button>
+                <button type="button" class="uiButton returnButton" onclick="window.location.href = window.location.pathname;">New Search</button>&emsp;<button type="button" class="uiButton returnButton" onclick="goToHome()">Home</button>
                 <br><br>
                 <small style="text-align: center;">To see robot images from pit scouting, go <a href="pitimages" style="all: unset; color: var(--gameFlairColor);">here</a></small>
             </div>
