--- a/src/points.html
+++ b/src/points.html
@@ -35,7 +35,7 @@
             themeHandle()
         </script>
         <div class="container">
-            <form>
+            <div>
                 <h1 style="font-family: 'raleway-300'">2023 Scouting<br><span class="gametitle">CHARGED UP</span></h1>
                 <div style="display: flex; flex-direction: column;">
                     <!--<a href="blackjack" class="gameflair1" style="margin-bottom: 5%;">blackjack</a><br>-->
@@ -43,7 +43,7 @@
                 </div>
                 <br>
                 <button type="button" style="color: #000; background-color: #FFB600; border-radius: 0.5rem; border-style: solid; border-color: #FFB600; border-width: 0.875rem; margin-top: 0.1rem;" onclick="goToHome()">Back</button>
-            </form>
+            </div>
         </div>
         <script>
             function goToHome() {
